--- a/src/pages/portfolio/projectsData.json
+++ b/src/pages/portfolio/projectsData.json
@@ -1,39 +1,39 @@
 [
   {
-    "title": "Bike Buddy",
-    "image": "./projectImages/bike.png",
+    "title": "Bite Buddy",
+    "image": "./projectImages/BiteBuddy.png",
     "description": "I was responsible for the routing functionality of Bike Buddy, an application that helps parents and guardians keep their children safe while cycling. Utilises the Leaflet.js library and TomTom Routing/Reverse Geolocation API's to create an interactive and visually appealing map that allows a user to plot a route, taking into account various factors such as traffic levels, bicycle lanes, and elevation.",
-    "technologies": "Leaflet | jQuery | Bootstrap",
+    "technologies": "JavaScript | HTML | Java",
     "github": "https://github.com/mdyeates/bike-buddy",
     "deployed": "https://norrinradd8.github.io/bike_buddy/",
     "bgcolor": "#f37737",
     "id": "1"
   },
   {
-    "title": "Weather",
-    "image": "./projectImages/weather.png",
-    "technologies": "jQuery | HTML | CSS",
-    "description": " This dashboard uses the OpenWeatherMap API to retrieve detailed weather data, including the city name, date, weather icon, temperature, humidity, and wind speed. The dashboard has a 5-day forecast feature and a search history feature that saves past searches for easy access. It also has a dark/light theme that changes the look of the page based on day or night in the searched location and uses the geolocation API to automatically determine the user's current location and display the weather.",
+    "title": "Photos",
+    "image": "./projectImages/Photos.png",
+    "technologies": "Java",
+    "description": " In the 'Photos' project, I developed a Java FX and FXML-based photo management application. My work included implementing photo tagging, search functionality, and managing stock and user photos. I also created login and admin systems for user account management and designed a robust backend using Java's Serializable interface for efficient data handling. My focus was on ensuring scalability and a seamless user experience.",
     "github": "https://github.com/mdyeates/weather-app",
     "deployed": "https://mdyeates.github.io/weather-app/",
     "bgcolor": "#29cbe0",
     "id": "2"
   },
   {
-    "title": "Team",
-    "image": "./projectImages/team.png",
-    "technologies": "JS | Node | Bootstrap | OOP | TTD",
-    "description": "Team Dashboard is a Node command-line application that takes in information about employees to generate a dynamic HTML web page.",
+    "title": "Chess",
+    "image": "./projectImages/chess.png",
+    "technologies": "Java",
+    "description": "In the chess game project, I focused on implementing the move validation system using Java. My role involved ensuring that each chess piece moved according to the rules, integrating complex functionalities like castling and pawn promotion. I also contributed to the user interface, making it intuitive for player interactions. My work was crucial in creating a robust and enjoyable chess-playing experience.",
     "github": "https://github.com/mdyeates/team-dashboard",
     "deployed": "https://drive.google.com/file/d/1_atUXTM-L9r4NccsrPaaWqPyNu37ftwH/view",
     "bgcolor": "#6c4bf4",
     "id": "3"
   },
   {
-    "title": "Quiz",
+    "title": "Andriod Photos",
     "image": "./projectImages/quiz.png",
     "technologies": "JS | HTML | CSS",
-    "description": "A quiz app on the fundamentals of JavaScript. There are 5 randomly selected multiple-choice questions and the user will have a time limit of 50 seconds. The remaining time will determine their score at the end. The user will be penalised by 10 seconds for every incorrect answer.",
+    "description": "For Andriod Photos, I was tasked with porting our JavaFX-based 'Photos' project to an Android app, using Android Studio and Java. This project was focused on implementing core functionalities like album management, photo display, and tagging, specifically for the Android platform. Key features included creating, deleting, and renaming photo albums, adding and removing photos, and implementing a search function for photos based on tags. The app was optimized for the Nexus 4 device emulator, adhering to Android API 34 specifications. My role was critical in adapting the JavaFX project to the Android environment, ensuring a smooth user experience and seamless functionality on Android devices.",
     "github": "https://github.com/mdyeates/coding-quiz",
     "deployed": "https://mdyeates.github.io/coding-quiz/",
     "bgcolor": "#f85781",
