--- a/src/pages/portfolio/projectsData.json
+++ b/src/pages/portfolio/projectsData.json
@@ -4,7 +4,7 @@
     "image": "./projectImages/Photos.png",
     "technologies": "Java | FXML",
     "description": " In the 'Photos' project, I developed a Java FX and FXML-based photo management application. My work included implementing photo tagging, search functionality, and managing stock and user photos. I also created login and admin systems for user account management and designed a robust backend using Java's Serializable interface for efficient data handling. My focus was on ensuring scalability and a seamless user experience.",
-    "BitBucket": "https://bitbucket.org/ha484/photos-32/src/master/",
+    "github": "https://bitbucket.org/ha484/photos-32/src/master/",
     "deployed": "https://drive.google.com/file/d/1ws4ITeYbPCO7e8oI4_3Yn9j9hH9RcEAR/view?usp=sharing",
     "bgcolor": "#29cbe0",
     "id": "2"
@@ -24,7 +24,7 @@
     "image": "./projectImages/AndroidPhotos.png",
     "technologies": "Java | Android Studio | XML",
     "description": "For Android Photos, I was tasked with porting our JavaFX-based 'Photos' project to an Android app, using Android Studio and Java. This project was focused on implementing core functionalities like album management, photo display, and tagging, specifically for the Android platform. Key features included creating, deleting, and renaming photo albums, adding and removing photos, and implementing a search function for photos based on tags. The app was optimized for the Nexus 4 device emulator, adhering to Android API 34 specifications. My role was critical in adapting the JavaFX project to the Android environment, ensuring a smooth user experience and seamless functionality on Android devices.",
-    "BitBucket": "https://bitbucket.org/ha484/androidapp32/src/main/",
+    "github": "https://bitbucket.org/ha484/androidapp32/src/main/",
     "deployed": "https://drive.google.com/file/d/1qvRlroXL0tq5fNdytph81qjfKIhK-ia_/view?usp=sharing",
     "bgcolor": "#f85781",
     "id": "4"
